Assembler/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> data_statement texts
Rule 2     start -> texts
Rule 3     data_statement -> . DATA define_datas
Rule 4     data_statement -> . DATA NUMBER define_datas
Rule 5     define_datas -> define_data
Rule 6     define_datas -> define_datas define_data
Rule 7     define_data -> VARIABLE : . WORDTYPE data
Rule 8     data -> VARIABLE
Rule 9     data -> NUMBER
Rule 10    texts -> text_statement
Rule 11    texts -> texts text_statement
Rule 12    decl_text -> . TEXT
Rule 13    decl_text -> . TEXT NUMBER
Rule 14    text_statement -> decl_text instructions
Rule 15    instructions -> instruction
Rule 16    instructions -> instructions instruction
Rule 17    instruction -> instruction_r
Rule 18    instruction -> instruction_i
Rule 19    instruction -> instruction_j
Rule 20    instruction -> VARIABLE : instruction
Rule 21    expression -> NUMBER
Rule 22    expression -> - NUMBER
Rule 23    expression -> VARIABLE
Rule 24    instruction_r -> instruction_add
Rule 25    instruction_r -> instruction_addu
Rule 26    instruction_r -> instruction_sub
Rule 27    instruction_r -> instruction_subu
Rule 28    instruction_r -> instruction_and
Rule 29    instruction_r -> instruction_mult
Rule 30    instruction_r -> instruction_multu
Rule 31    instruction_r -> instruction_div
Rule 32    instruction_r -> instruction_divu
Rule 33    instruction_r -> instruction_mfhi
Rule 34    instruction_r -> instruction_mflo
Rule 35    instruction_r -> instruction_mthi
Rule 36    instruction_r -> instruction_mtlo
Rule 37    instruction_r -> instruction_mfc0
Rule 38    instruction_r -> instruction_mtc0
Rule 39    instruction_r -> instruction_or
Rule 40    instruction_r -> instruction_xor
Rule 41    instruction_r -> instruction_nor
Rule 42    instruction_r -> instruction_slt
Rule 43    instruction_r -> instruction_sltu
Rule 44    instruction_r -> instruction_sll
Rule 45    instruction_r -> instruction_srl
Rule 46    instruction_r -> instruction_sra
Rule 47    instruction_r -> instruction_sllv
Rule 48    instruction_r -> instruction_srlv
Rule 49    instruction_r -> instruction_srav
Rule 50    instruction_r -> instruction_jr
Rule 51    instruction_r -> instruction_jalr
Rule 52    instruction_r -> instruction_break
Rule 53    instruction_r -> instruction_syscall
Rule 54    instruction_r -> instruction_eret
Rule 55    instruction_add -> ADD REG REG REG
Rule 56    instruction_addu -> ADDU REG REG REG
Rule 57    instruction_sub -> SUB REG REG REG
Rule 58    instruction_subu -> SUBU REG REG REG
Rule 59    instruction_and -> AND REG REG REG
Rule 60    instruction_mult -> MULT REG REG
Rule 61    instruction_multu -> MULTU REG REG
Rule 62    instruction_div -> DIV REG REG
Rule 63    instruction_divu -> DIVU REG REG
Rule 64    instruction_mfhi -> MFHI REG
Rule 65    instruction_mflo -> MFLO REG
Rule 66    instruction_mthi -> MTHI REG
Rule 67    instruction_mtlo -> MTLO REG
Rule 68    instruction_mfc0 -> MFC0 REG REG expression
Rule 69    instruction_mtc0 -> MTC0 REG REG expression
Rule 70    instruction_or -> OR REG REG REG
Rule 71    instruction_xor -> XOR REG REG REG
Rule 72    instruction_nor -> NOR REG REG REG
Rule 73    instruction_slt -> SLT REG REG REG
Rule 74    instruction_sltu -> SLTU REG REG REG
Rule 75    instruction_sll -> SLL REG REG expression
Rule 76    instruction_srl -> SRL REG REG expression
Rule 77    instruction_sra -> SRA REG REG expression
Rule 78    instruction_sllv -> SLLV REG REG REG
Rule 79    instruction_srlv -> SRLV REG REG REG
Rule 80    instruction_srav -> SRAV REG REG REG
Rule 81    instruction_jr -> JR REG
Rule 82    instruction_jalr -> JALR REG REG
Rule 83    instruction_break -> BREAK
Rule 84    instruction_syscall -> SYSCALL
Rule 85    instruction_eret -> ERET
Rule 86    instruction_i -> instruction_addi
Rule 87    instruction_i -> instruction_addiu
Rule 88    instruction_i -> instruction_andi
Rule 89    instruction_i -> instruction_ori
Rule 90    instruction_i -> instruction_xori
Rule 91    instruction_i -> instruction_lui
Rule 92    instruction_i -> instruction_lb
Rule 93    instruction_i -> instruction_lbu
Rule 94    instruction_i -> instruction_lh
Rule 95    instruction_i -> instruction_lhu
Rule 96    instruction_i -> instruction_sb
Rule 97    instruction_i -> instruction_sh
Rule 98    instruction_i -> instruction_lw
Rule 99    instruction_i -> instruction_sw
Rule 100   instruction_i -> instruction_beq
Rule 101   instruction_i -> instruction_bne
Rule 102   instruction_i -> instruction_bgez
Rule 103   instruction_i -> instruction_bgtz
Rule 104   instruction_i -> instruction_blez
Rule 105   instruction_i -> instruction_bltz
Rule 106   instruction_i -> instruction_bgezal
Rule 107   instruction_i -> instruction_bltzal
Rule 108   instruction_i -> instruction_slti
Rule 109   instruction_i -> instruction_sltiu
Rule 110   instruction_addi -> ADDI REG REG expression
Rule 111   instruction_addiu -> ADDIU REG REG expression
Rule 112   instruction_andi -> ANDI REG REG expression
Rule 113   instruction_ori -> ORI REG REG expression
Rule 114   instruction_xori -> XORI REG REG expression
Rule 115   instruction_lui -> LUI REG expression
Rule 116   instruction_lb -> LB REG expression ( REG )
Rule 117   instruction_lbu -> LBU REG expression ( REG )
Rule 118   instruction_lh -> LH REG expression ( REG )
Rule 119   instruction_lhu -> LHU REG expression ( REG )
Rule 120   instruction_sb -> SB REG expression ( REG )
Rule 121   instruction_sh -> SH REG expression ( REG )
Rule 122   instruction_lw -> LW REG expression ( REG )
Rule 123   instruction_sw -> SW REG expression ( REG )
Rule 124   instruction_beq -> BEQ REG REG expression
Rule 125   instruction_bne -> BNE REG REG expression
Rule 126   instruction_bgez -> BGEZ REG expression
Rule 127   instruction_bgtz -> BGTZ REG expression
Rule 128   instruction_blez -> BLEZ REG expression
Rule 129   instruction_bltz -> BLTZ REG expression
Rule 130   instruction_bgezal -> BGEZAL REG expression
Rule 131   instruction_bltzal -> BLTZAL REG expression
Rule 132   instruction_slti -> SLTI REG REG expression
Rule 133   instruction_sltiu -> SLTIU REG REG expression
Rule 134   instruction_j -> instruction_jj
Rule 135   instruction_j -> instruction_jal
Rule 136   instruction_jj -> J expression
Rule 137   instruction_jal -> JAL expression

Terminals, with rules where they appear

(                    : 116 117 118 119 120 121 122 123
)                    : 116 117 118 119 120 121 122 123
-                    : 22
.                    : 3 4 7 12 13
:                    : 7 20
ADD                  : 55
ADDI                 : 110
ADDIU                : 111
ADDU                 : 56
AND                  : 59
ANDI                 : 112
BEQ                  : 124
BGEZ                 : 126
BGEZAL               : 130
BGTZ                 : 127
BLEZ                 : 128
BLTZ                 : 129
BLTZAL               : 131
BNE                  : 125
BREAK                : 83
DATA                 : 3 4
DIV                  : 62
DIVU                 : 63
ERET                 : 85
J                    : 136
JAL                  : 137
JALR                 : 82
JR                   : 81
LB                   : 116
LBU                  : 117
LH                   : 118
LHU                  : 119
LUI                  : 115
LW                   : 122
MFC0                 : 68
MFHI                 : 64
MFLO                 : 65
MTC0                 : 69
MTHI                 : 66
MTLO                 : 67
MULT                 : 60
MULTU                : 61
NOR                  : 72
NUMBER               : 4 9 13 21 22
OR                   : 70
ORI                  : 113
REG                  : 55 55 55 56 56 56 57 57 57 58 58 58 59 59 59 60 60 61 61 62 62 63 63 64 65 66 67 68 68 69 69 70 70 70 71 71 71 72 72 72 73 73 73 74 74 74 75 75 76 76 77 77 78 78 78 79 79 79 80 80 80 81 82 82 110 110 111 111 112 112 113 113 114 114 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 127 128 129 130 131 132 132 133 133
SB                   : 120
SH                   : 121
SLL                  : 75
SLLV                 : 78
SLT                  : 73
SLTI                 : 132
SLTIU                : 133
SLTU                 : 74
SRA                  : 77
SRAV                 : 80
SRL                  : 76
SRLV                 : 79
SUB                  : 57
SUBU                 : 58
SW                   : 123
SYSCALL              : 84
TEXT                 : 12 13
VARIABLE             : 7 8 20 23
WORDTYPE             : 7
XOR                  : 71
XORI                 : 114
error                : 

Nonterminals, with rules where they appear

data                 : 7
data_statement       : 1
decl_text            : 14
define_data          : 5 6
define_datas         : 3 4 6
expression           : 68 69 75 76 77 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 136 137
instruction          : 15 16 20
instruction_add      : 24
instruction_addi     : 86
instruction_addiu    : 87
instruction_addu     : 25
instruction_and      : 28
instruction_andi     : 88
instruction_beq      : 100
instruction_bgez     : 102
instruction_bgezal   : 106
instruction_bgtz     : 103
instruction_blez     : 104
instruction_bltz     : 105
instruction_bltzal   : 107
instruction_bne      : 101
instruction_break    : 52
instruction_div      : 31
instruction_divu     : 32
instruction_eret     : 54
instruction_i        : 18
instruction_j        : 19
instruction_jal      : 135
instruction_jalr     : 51
instruction_jj       : 134
instruction_jr       : 50
instruction_lb       : 92
instruction_lbu      : 93
instruction_lh       : 94
instruction_lhu      : 95
instruction_lui      : 91
instruction_lw       : 98
instruction_mfc0     : 37
instruction_mfhi     : 33
instruction_mflo     : 34
instruction_mtc0     : 38
instruction_mthi     : 35
instruction_mtlo     : 36
instruction_mult     : 29
instruction_multu    : 30
instruction_nor      : 41
instruction_or       : 39
instruction_ori      : 89
instruction_r        : 17
instruction_sb       : 96
instruction_sh       : 97
instruction_sll      : 44
instruction_sllv     : 47
instruction_slt      : 42
instruction_slti     : 108
instruction_sltiu    : 109
instruction_sltu     : 43
instruction_sra      : 46
instruction_srav     : 49
instruction_srl      : 45
instruction_srlv     : 48
instruction_sub      : 26
instruction_subu     : 27
instruction_sw       : 99
instruction_syscall  : 53
instruction_xor      : 40
instruction_xori     : 90
instructions         : 14 16
start                : 0
text_statement       : 10 11
texts                : 1 2 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . data_statement texts
    (2) start -> . texts
    (3) data_statement -> . . DATA define_datas
    (4) data_statement -> . . DATA NUMBER define_datas
    (10) texts -> . text_statement
    (11) texts -> . texts text_statement
    (14) text_statement -> . decl_text instructions
    (12) decl_text -> . . TEXT
    (13) decl_text -> . . TEXT NUMBER

    .               shift and go to state 5

    decl_text                      shift and go to state 3
    text_statement                 shift and go to state 2
    data_statement                 shift and go to state 4
    start                          shift and go to state 6
    texts                          shift and go to state 1

state 1

    (2) start -> texts .
    (11) texts -> texts . text_statement
    (14) text_statement -> . decl_text instructions
    (12) decl_text -> . . TEXT
    (13) decl_text -> . . TEXT NUMBER

    $end            reduce using rule 2 (start -> texts .)
    .               shift and go to state 7

    decl_text                      shift and go to state 3
    text_statement                 shift and go to state 8

state 2

    (10) texts -> text_statement .

    .               reduce using rule 10 (texts -> text_statement .)
    $end            reduce using rule 10 (texts -> text_statement .)


state 3

    (14) text_statement -> decl_text . instructions
    (15) instructions -> . instruction
    (16) instructions -> . instructions instruction
    (17) instruction -> . instruction_r
    (18) instruction -> . instruction_i
    (19) instruction -> . instruction_j
    (20) instruction -> . VARIABLE : instruction
    (24) instruction_r -> . instruction_add
    (25) instruction_r -> . instruction_addu
    (26) instruction_r -> . instruction_sub
    (27) instruction_r -> . instruction_subu
    (28) instruction_r -> . instruction_and
    (29) instruction_r -> . instruction_mult
    (30) instruction_r -> . instruction_multu
    (31) instruction_r -> . instruction_div
    (32) instruction_r -> . instruction_divu
    (33) instruction_r -> . instruction_mfhi
    (34) instruction_r -> . instruction_mflo
    (35) instruction_r -> . instruction_mthi
    (36) instruction_r -> . instruction_mtlo
    (37) instruction_r -> . instruction_mfc0
    (38) instruction_r -> . instruction_mtc0
    (39) instruction_r -> . instruction_or
    (40) instruction_r -> . instruction_xor
    (41) instruction_r -> . instruction_nor
    (42) instruction_r -> . instruction_slt
    (43) instruction_r -> . instruction_sltu
    (44) instruction_r -> . instruction_sll
    (45) instruction_r -> . instruction_srl
    (46) instruction_r -> . instruction_sra
    (47) instruction_r -> . instruction_sllv
    (48) instruction_r -> . instruction_srlv
    (49) instruction_r -> . instruction_srav
    (50) instruction_r -> . instruction_jr
    (51) instruction_r -> . instruction_jalr
    (52) instruction_r -> . instruction_break
    (53) instruction_r -> . instruction_syscall
    (54) instruction_r -> . instruction_eret
    (86) instruction_i -> . instruction_addi
    (87) instruction_i -> . instruction_addiu
    (88) instruction_i -> . instruction_andi
    (89) instruction_i -> . instruction_ori
    (90) instruction_i -> . instruction_xori
    (91) instruction_i -> . instruction_lui
    (92) instruction_i -> . instruction_lb
    (93) instruction_i -> . instruction_lbu
    (94) instruction_i -> . instruction_lh
    (95) instruction_i -> . instruction_lhu
    (96) instruction_i -> . instruction_sb
    (97) instruction_i -> . instruction_sh
    (98) instruction_i -> . instruction_lw
    (99) instruction_i -> . instruction_sw
    (100) instruction_i -> . instruction_beq
    (101) instruction_i -> . instruction_bne
    (102) instruction_i -> . instruction_bgez
    (103) instruction_i -> . instruction_bgtz
    (104) instruction_i -> . instruction_blez
    (105) instruction_i -> . instruction_bltz
    (106) instruction_i -> . instruction_bgezal
    (107) instruction_i -> . instruction_bltzal
    (108) instruction_i -> . instruction_slti
    (109) instruction_i -> . instruction_sltiu
    (134) instruction_j -> . instruction_jj
    (135) instruction_j -> . instruction_jal
    (55) instruction_add -> . ADD REG REG REG
    (56) instruction_addu -> . ADDU REG REG REG
    (57) instruction_sub -> . SUB REG REG REG
    (58) instruction_subu -> . SUBU REG REG REG
    (59) instruction_and -> . AND REG REG REG
    (60) instruction_mult -> . MULT REG REG
    (61) instruction_multu -> . MULTU REG REG
    (62) instruction_div -> . DIV REG REG
    (63) instruction_divu -> . DIVU REG REG
    (64) instruction_mfhi -> . MFHI REG
    (65) instruction_mflo -> . MFLO REG
    (66) instruction_mthi -> . MTHI REG
    (67) instruction_mtlo -> . MTLO REG
    (68) instruction_mfc0 -> . MFC0 REG REG expression
    (69) instruction_mtc0 -> . MTC0 REG REG expression
    (70) instruction_or -> . OR REG REG REG
    (71) instruction_xor -> . XOR REG REG REG
    (72) instruction_nor -> . NOR REG REG REG
    (73) instruction_slt -> . SLT REG REG REG
    (74) instruction_sltu -> . SLTU REG REG REG
    (75) instruction_sll -> . SLL REG REG expression
    (76) instruction_srl -> . SRL REG REG expression
    (77) instruction_sra -> . SRA REG REG expression
    (78) instruction_sllv -> . SLLV REG REG REG
    (79) instruction_srlv -> . SRLV REG REG REG
    (80) instruction_srav -> . SRAV REG REG REG
    (81) instruction_jr -> . JR REG
    (82) instruction_jalr -> . JALR REG REG
    (83) instruction_break -> . BREAK
    (84) instruction_syscall -> . SYSCALL
    (85) instruction_eret -> . ERET
    (110) instruction_addi -> . ADDI REG REG expression
    (111) instruction_addiu -> . ADDIU REG REG expression
    (112) instruction_andi -> . ANDI REG REG expression
    (113) instruction_ori -> . ORI REG REG expression
    (114) instruction_xori -> . XORI REG REG expression
    (115) instruction_lui -> . LUI REG expression
    (116) instruction_lb -> . LB REG expression ( REG )
    (117) instruction_lbu -> . LBU REG expression ( REG )
    (118) instruction_lh -> . LH REG expression ( REG )
    (119) instruction_lhu -> . LHU REG expression ( REG )
    (120) instruction_sb -> . SB REG expression ( REG )
    (121) instruction_sh -> . SH REG expression ( REG )
    (122) instruction_lw -> . LW REG expression ( REG )
    (123) instruction_sw -> . SW REG expression ( REG )
    (124) instruction_beq -> . BEQ REG REG expression
    (125) instruction_bne -> . BNE REG REG expression
    (126) instruction_bgez -> . BGEZ REG expression
    (127) instruction_bgtz -> . BGTZ REG expression
    (128) instruction_blez -> . BLEZ REG expression
    (129) instruction_bltz -> . BLTZ REG expression
    (130) instruction_bgezal -> . BGEZAL REG expression
    (131) instruction_bltzal -> . BLTZAL REG expression
    (132) instruction_slti -> . SLTI REG REG expression
    (133) instruction_sltiu -> . SLTIU REG REG expression
    (136) instruction_jj -> . J expression
    (137) instruction_jal -> . JAL expression

    VARIABLE        shift and go to state 122
    ADD             shift and go to state 77
    ADDU            shift and go to state 32
    SUB             shift and go to state 61
    SUBU            shift and go to state 53
    AND             shift and go to state 55
    MULT            shift and go to state 102
    MULTU           shift and go to state 67
    DIV             shift and go to state 101
    DIVU            shift and go to state 13
    MFHI            shift and go to state 46
    MFLO            shift and go to state 98
    MTHI            shift and go to state 128
    MTLO            shift and go to state 59
    MFC0            shift and go to state 120
    MTC0            shift and go to state 18
    OR              shift and go to state 39
    XOR             shift and go to state 115
    NOR             shift and go to state 60
    SLT             shift and go to state 116
    SLTU            shift and go to state 37
    SLL             shift and go to state 119
    SRL             shift and go to state 76
    SRA             shift and go to state 72
    SLLV            shift and go to state 35
    SRLV            shift and go to state 94
    SRAV            shift and go to state 100
    JR              shift and go to state 10
    JALR            shift and go to state 84
    BREAK           shift and go to state 49
    SYSCALL         shift and go to state 16
    ERET            shift and go to state 85
    ADDI            shift and go to state 40
    ADDIU           shift and go to state 112
    ANDI            shift and go to state 68
    ORI             shift and go to state 95
    XORI            shift and go to state 79
    LUI             shift and go to state 66
    LB              shift and go to state 104
    LBU             shift and go to state 15
    LH              shift and go to state 107
    LHU             shift and go to state 24
    SB              shift and go to state 96
    SH              shift and go to state 93
    LW              shift and go to state 108
    SW              shift and go to state 89
    BEQ             shift and go to state 47
    BNE             shift and go to state 30
    BGEZ            shift and go to state 117
    BGTZ            shift and go to state 28
    BLEZ            shift and go to state 52
    BLTZ            shift and go to state 42
    BGEZAL          shift and go to state 113
    BLTZAL          shift and go to state 126
    SLTI            shift and go to state 36
    SLTIU           shift and go to state 86
    J               shift and go to state 75
    JAL             shift and go to state 51

    instruction_mfc0               shift and go to state 43
    instruction_and                shift and go to state 44
    instruction_sb                 shift and go to state 62
    instruction_mfhi               shift and go to state 45
    instruction_or                 shift and go to state 9
    instruction_sh                 shift and go to state 63
    instruction_lhu                shift and go to state 105
    instruction_xori               shift and go to state 64
    instruction_sw                 shift and go to state 65
    instruction_bltzal             shift and go to state 11
    instruction_sllv               shift and go to state 12
    instruction_lb                 shift and go to state 31
    instruction_div                shift and go to state 48
    instruction_jj                 shift and go to state 103
    instruction_sra                shift and go to state 69
    instruction_break              shift and go to state 92
    instruction_srl                shift and go to state 70
    instruction_mtc0               shift and go to state 106
    instruction_lh                 shift and go to state 25
    instruction_srav               shift and go to state 123
    instruction_multu              shift and go to state 50
    instruction_lui                shift and go to state 17
    instruction_syscall            shift and go to state 110
    instruction_jr                 shift and go to state 111
    instructions                   shift and go to state 19
    instruction_add                shift and go to state 83
    instruction_srlv               shift and go to state 20
    instruction_sltiu              shift and go to state 21
    instruction_r                  shift and go to state 71
    instruction_slti               shift and go to state 23
    instruction_bne                shift and go to state 109
    instruction_blez               shift and go to state 73
    instruction_lbu                shift and go to state 74
    instruction_lw                 shift and go to state 22
    instruction_bgez               shift and go to state 114
    instruction_mult               shift and go to state 118
    instruction_bltz               shift and go to state 82
    instruction_mthi               shift and go to state 54
    instruction_beq                shift and go to state 78
    instruction_sltu               shift and go to state 26
    instruction_subu               shift and go to state 27
    instruction_i                  shift and go to state 80
    instruction_j                  shift and go to state 81
    instruction_jal                shift and go to state 99
    instruction_xor                shift and go to state 29
    instruction_mtlo               shift and go to state 124
    instruction_jalr               shift and go to state 56
    instruction_addiu              shift and go to state 97
    instruction_eret               shift and go to state 14
    instruction_addi               shift and go to state 125
    instruction_andi               shift and go to state 34
    instruction_slt                shift and go to state 57
    instruction_ori                shift and go to state 87
    instruction                    shift and go to state 88
    instruction_bgezal             shift and go to state 90
    instruction_sub                shift and go to state 91
    instruction_sll                shift and go to state 58
    instruction_bgtz               shift and go to state 33
    instruction_mflo               shift and go to state 38
    instruction_addu               shift and go to state 127
    instruction_nor                shift and go to state 41
    instruction_divu               shift and go to state 121

state 4

    (1) start -> data_statement . texts
    (10) texts -> . text_statement
    (11) texts -> . texts text_statement
    (14) text_statement -> . decl_text instructions
    (12) decl_text -> . . TEXT
    (13) decl_text -> . . TEXT NUMBER

    .               shift and go to state 7

    texts                          shift and go to state 129
    decl_text                      shift and go to state 3
    text_statement                 shift and go to state 2

state 5

    (3) data_statement -> . . DATA define_datas
    (4) data_statement -> . . DATA NUMBER define_datas
    (12) decl_text -> . . TEXT
    (13) decl_text -> . . TEXT NUMBER

    DATA            shift and go to state 131
    TEXT            shift and go to state 130


state 6

    (0) S' -> start .



state 7

    (12) decl_text -> . . TEXT
    (13) decl_text -> . . TEXT NUMBER

    TEXT            shift and go to state 130


state 8

    (11) texts -> texts text_statement .

    .               reduce using rule 11 (texts -> texts text_statement .)
    $end            reduce using rule 11 (texts -> texts text_statement .)


state 9

    (39) instruction_r -> instruction_or .

    VARIABLE        reduce using rule 39 (instruction_r -> instruction_or .)
    ADD             reduce using rule 39 (instruction_r -> instruction_or .)
    ADDU            reduce using rule 39 (instruction_r -> instruction_or .)
    SUB             reduce using rule 39 (instruction_r -> instruction_or .)
    SUBU            reduce using rule 39 (instruction_r -> instruction_or .)
    AND             reduce using rule 39 (instruction_r -> instruction_or .)
    MULT            reduce using rule 39 (instruction_r -> instruction_or .)
    MULTU           reduce using rule 39 (instruction_r -> instruction_or .)
    DIV             reduce using rule 39 (instruction_r -> instruction_or .)
    DIVU            reduce using rule 39 (instruction_r -> instruction_or .)
    MFHI            reduce using rule 39 (instruction_r -> instruction_or .)
    MFLO            reduce using rule 39 (instruction_r -> instruction_or .)
    MTHI            reduce using rule 39 (instruction_r -> instruction_or .)
    MTLO            reduce using rule 39 (instruction_r -> instruction_or .)
    MFC0            reduce using rule 39 (instruction_r -> instruction_or .)
    MTC0            reduce using rule 39 (instruction_r -> instruction_or .)
    OR              reduce using rule 39 (instruction_r -> instruction_or .)
    XOR             reduce using rule 39 (instruction_r -> instruction_or .)
    NOR             reduce using rule 39 (instruction_r -> instruction_or .)
    SLT             reduce using rule 39 (instruction_r -> instruction_or .)
    SLTU            reduce using rule 39 (instruction_r -> instruction_or .)
    SLL             reduce using rule 39 (instruction_r -> instruction_or .)
    SRL             reduce using rule 39 (instruction_r -> instruction_or .)
    SRA             reduce using rule 39 (instruction_r -> instruction_or .)
    SLLV            reduce using rule 39 (instruction_r -> instruction_or .)
    SRLV            reduce using rule 39 (instruction_r -> instruction_or .)
    SRAV            reduce using rule 39 (instruction_r -> instruction_or .)
    JR              reduce using rule 39 (instruction_r -> instruction_or .)
    JALR            reduce using rule 39 (instruction_r -> instruction_or .)
    BREAK           reduce using rule 39 (instruction_r -> instruction_or .)
    SYSCALL         reduce using rule 39 (instruction_r -> instruction_or .)
    ERET            reduce using rule 39 (instruction_r -> instruction_or .)
    ADDI            reduce using rule 39 (instruction_r -> instruction_or .)
    ADDIU           reduce using rule 39 (instruction_r -> instruction_or .)
    ANDI            reduce using rule 39 (instruction_r -> instruction_or .)
    ORI             reduce using rule 39 (instruction_r -> instruction_or .)
    XORI            reduce using rule 39 (instruction_r -> instruction_or .)
    LUI             reduce using rule 39 (instruction_r -> instruction_or .)
    LB              reduce using rule 39 (instruction_r -> instruction_or .)
    LBU             reduce using rule 39 (instruction_r -> instruction_or .)
    LH              reduce using rule 39 (instruction_r -> instruction_or .)
    LHU             reduce using rule 39 (instruction_r -> instruction_or .)
    SB              reduce using rule 39 (instruction_r -> instruction_or .)
    SH              reduce using rule 39 (instruction_r -> instruction_or .)
    LW              reduce using rule 39 (instruction_r -> instruction_or .)
    SW              reduce using rule 39 (instruction_r -> instruction_or .)
    BEQ             reduce using rule 39 (instruction_r -> instruction_or .)
    BNE             reduce using rule 39 (instruction_r -> instruction_or .)
    BGEZ            reduce using rule 39 (instruction_r -> instruction_or .)
    BGTZ            reduce using rule 39 (instruction_r -> instruction_or .)
    BLEZ            reduce using rule 39 (instruction_r -> instruction_or .)
    BLTZ            reduce using rule 39 (instruction_r -> instruction_or .)
    BGEZAL          reduce using rule 39 (instruction_r -> instruction_or .)
    BLTZAL          reduce using rule 39 (instruction_r -> instruction_or .)
    SLTI            reduce using rule 39 (instruction_r -> instruction_or .)
    SLTIU           reduce using rule 39 (instruction_r -> instruction_or .)
    J               reduce using rule 39 (instruction_r -> instruction_or .)
    JAL             reduce using rule 39 (instruction_r -> instruction_or .)
    .               reduce using rule 39 (instruction_r -> instruction_or .)
    $end            reduce using rule 39 (instruction_r -> instruction_or .)


state 10

    (81) instruction_jr -> JR . REG

    REG             shift and go to state 132


state 11

    (107) instruction_i -> instruction_bltzal .

    VARIABLE        reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ADD             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ADDU            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SUB             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SUBU            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    AND             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MULT            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MULTU           reduce using rule 107 (instruction_i -> instruction_bltzal .)
    DIV             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    DIVU            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MFHI            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MFLO            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MTHI            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MTLO            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MFC0            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    MTC0            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    OR              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    XOR             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    NOR             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SLT             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SLTU            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SLL             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SRL             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SRA             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SLLV            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SRLV            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SRAV            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    JR              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    JALR            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BREAK           reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SYSCALL         reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ERET            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ADDI            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ADDIU           reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ANDI            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    ORI             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    XORI            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    LUI             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    LB              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    LBU             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    LH              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    LHU             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SB              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SH              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    LW              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SW              reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BEQ             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BNE             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BGEZ            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BGTZ            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BLEZ            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BLTZ            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BGEZAL          reduce using rule 107 (instruction_i -> instruction_bltzal .)
    BLTZAL          reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SLTI            reduce using rule 107 (instruction_i -> instruction_bltzal .)
    SLTIU           reduce using rule 107 (instruction_i -> instruction_bltzal .)
    J               reduce using rule 107 (instruction_i -> instruction_bltzal .)
    JAL             reduce using rule 107 (instruction_i -> instruction_bltzal .)
    .               reduce using rule 107 (instruction_i -> instruction_bltzal .)
    $end            reduce using rule 107 (instruction_i -> instruction_bltzal .)


state 12

    (47) instruction_r -> instruction_sllv .
